# rust-roguelike

./: .gitignore  Cargo.toml  README.md  savegame.json
src/: components.rs  damage_system.rs  gui.rs  hunger_system.rs  inventory_system.rs  main.rs  map.rs  map_indexing_system.rs  melee_combat_system.rs  monster_ai_system.rs  particle_system.rs  player.rs  random_table.rs  rect.rs  rex_assets.rs  saveload_system.rs  spawner.rs  trigger_system.rs  visibility_system.rs
src/map_builders/: bsp_dungeon.rs  bsp_interior.rs  cellular_automata.rs  common.rs  dla.rs  drunkard.rs  maze.rs  mod.rs  simple_map.rs  voronoi.rs
src/map_builders/prefab_builder/: mod.rs  prefab_levels.rs  prefab_sections.rs
src/map_builders/waveform_collapse/: constraints.rs  mod.rs  solver.rs
