[package]
name = "rust-roguelike"
version = "0.1.0"
authors = ["Drew <hatfielddr>"]
edition = "2018"

[dependencies]
rltk = { version = "0.8.1", features = ["serde"] }
specs = { version = "0.16.1", features = ["serde"] }
specs-derive = { version = "0.4.1" }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = { version = "1.0.61" }
